infra/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: alexlee5541/sentiment-frontend:v4 # Your Docker Hub Image
          resources:
            requests:
              memory: "150Mi" # Request 150MB
            limits:
              memory: "250Mi" # Hard limit at 250MB
